src/test/compile-fail/private-item-simple.rs
mod a {
    priv fn f() {}
}

fn main() {
    a::f(); //~ ERROR unresolved name
}

